--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.password=Liutauras2003
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.lt.javau12=INFO
+
+jwt.secret="manokazkokslabaifainasslaptazodis"
+jwt.expiration=86400000
+
